For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 9.9

** C78
C78 is now accepted as an alias for K&RC.

** More predefined types
Added `iconv_t`, `locale_t`, `posix_spawnattr_t`, `posix_spawn_file_actions_t`,
`regex_t`, `regmatch_t`, and `regoff_t`.

** Pointer-to-function qualifiers
A pointer to function with qualifiers, e.g.:

    int (*f)() const                    // illegal

is now correctly caught as an error.


* Changes in Cdecl 9.8

** Added `extern "C" using` support
`extern "C" using` declarations are now supported.

** C++ `auto` help
The help for pseudo-English now correctly includes `auto` as a storage class
for C++98 and C++03.

** Adding `--explicit-int` to `--help`
Added (the missing) `--explicit-int` to the help message.

** Added `Doxyfile` to tarball
Added (the missing) `Doxyfile` to the dist-generated tarball.


* Changes in Cdecl 9.7

** Multi-type `typedef`
Multiple types can now be declared in a single `typedef`:

    typedef int Int, *Pint;

** New abbreviations
There are new abbreviations:

    conv  conversion
    ctor  constructor
    dtor  destructor

** Qualified pointer spacing
Fixed spacing for qualified pointers.


* Changes in Cdecl 9.6

** Specific languages in error messages
Rather than just say "<feature> is not supported in <current-lang>", now says
"<feature> is not supported until <later-lang>."

** More constructor & destructor warning checks
Constructors and destructors are now checked for `throw`.  Constructor
parameters are now checked for warnings.

** Reserved identifier warnings
Warnings are now given for names that are reserved identifiers, specifically
names that match the patterns `_[A-Z_]*` (C and C++) or `*__*` (C++ only).
