@@ -15,6 +15,9 @@ with their complete changes, see the AUTHORS file.
 ** C78
 C78 is now accepted as an alias for K&RC.
 
+** "Did you mean ...?" for `set` options
+"Did you mean ...?" suggestions have been added for `set` options.
+
 ** More predefined types
 Added `iconv_t`, `locale_t`, `posix_spawnattr_t`, `posix_spawn_file_actions_t`,
 `regex_t`, `regmatch_t`, and `regoff_t`.
